  * vicfg: Allows editing preferred content expressions for groups.
  * groupwanted can be used in preferred content expressions.
  * metadata: Add --get
  * metadata: Support --key option (and some other ones like --all)
  * map: Fix crash when one of the remotes of a repo is a local directory
    that does not exist, or is not a git repo.

 -- Joey Hess <joeyh@debian.org>  Thu, 06 Mar 2014 16:17:01 -0400

git-annex (5.20140306) unstable; urgency=high

  * sync: Fix bug in direct mode that caused a file that was not
    checked into git to be deleted when there was a conflicting
    merge with a remote.
  * webapp: Now supports HTTPS.
  * webapp: No longer supports a port specified after --listen, since
    it was buggy, and that use case is better supported by setting up HTTPS.
  * annex.listen can be configured, instead of using --listen
  * annex.startupscan can be set to false to disable the assistant's startup
    scan.
  * Probe for quvi version at run time.
  * webapp: Filter out from Switch Repository list any
    repositories listed in autostart file that don't have a
    git directory anymore. (Or are bare)
  * webapp: Refuse to start in a bare git repository.
  * assistant --autostart: Refuse to start in a bare git repository.
  * webapp: Don't list the public repository group when editing a
    git repository; it only makes sense for special remotes.
  * view, vfilter: Add support for filtering tags and values out of a view,
    using !tag and field!=value.
  * vadd: Allow listing multiple desired values for a field.
  * view: Refuse to enter a view when no branch is currently checked out.
  * metadata: To only set a field when it's not already got a value, use
    -s field?=value
  * Run .git/hooks/pre-commit-annex whenever a commit is made.
  * sync: Automatically resolve merge conflict between and annexed file
    and a regular git file.
  * glacier: Pass --region to glacier checkpresent.