@@ -26,6 +26,7 @@ git-annex (5.20140307) UNRELEASED; urgency=medium
   * metadata: Support --key option (and some other ones like --all)
   * map: Fix crash when one of the remotes of a repo is a local directory
     that does not exist, or is not a git repo.
+  * rsync special remote: Fix slashes when used on Windows.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 06 Mar 2014 16:17:01 -0400
 
